--- a/Call-to-actions-pages/style.css
+++ b/Call-to-actions-pages/style.css
@@ -7,9 +7,24 @@
     --light-green: #eff6f3;
     --yellow-green: #f8d254;
     --green: #a0cd9e;
+    color: #000;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
 }
 
 html {
     height: 100%;
     width: 100%;
+}
+
+h1 {
+    color: #000;
+    font-family: Inter;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
