--- a/Call-to-actions-pages/style.css
+++ b/Call-to-actions-pages/style.css
@@ -28,3 +28,60 @@ h1 {
     font-weight: 600;
     line-height: normal;
 }
+
+button {
+    font-size: 18px;
+    font-weight: 500;
+    padding: 13px 25px;
+    cursor: pointer;
+}
+
+.btn-large {
+    padding: 17px 30px;
+}
+
+.btn-middle {
+    padding: 13px 25px;
+}
+
+.btn-small {
+    padding: 10px 20px;
+}
+
+.btn-primary:hover {
+    background-color: #283A27;
+}
+
+.btn-primary {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background-color: var(--dark-green);
+    color: var(--white);
+    border:0;
+}
+
+.btn-disable {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+
+.btn-secondary {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background-color: var(--white);
+    color: var(--dark-green);
+    border:1px solid var(--dark-green);
+}
+
+.btn-secondary:hover {
+    border-color: #213220;
+    color: #213220;
+}
